<resources>
    <string name="app_name">SecurityHome</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Este no es un nombre de usuario válido</string>
    <string name="invalid_password">La contraseña debe contener al menos 8 caracteres</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="registrarme">Registrarme</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Coto San Nicolás</string>
    <string name="nav_header_subtitle">Salida a San Luis KM. 12</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_configuracion">configuracion</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_invitadoslista">invitadoslista</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estado_de_dispositivo">Estado de dispositivo</string>
    <string name="dispositivo_conectado">Dispositivo conectado</string>
    <string name="direcci_n_ip">Dirección IP</string>
    <string name="transmisi_n_en_tiempo_real">Transmisión en tiempo real</string>

    <string name="security_home_v1_0_beta_desarrollado_por_el_equipo_2_security_home_2021_2022">Security Home v1.0 beta Desarrollado por el equipo 2 Security Home 2021-2022</string>

    <string name="concluir_registro">Concluir Registro</string>

    <string name="mi_nombre">Mi nombre</string>
    <string name="mi_apellido">Mi apellido</string>

    <string name="lugar_de_residencia">Lugar de residencia</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="tel_fono">Teléfono</string>
    <string name="contrase_a">Contraseña</string>

    <string name="solicitar_cambio">Solicitar cambio</string>
    <string name="editar_residente">Editar residente</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="calle_de_residencia">Calle de residencia</string>
    <string name="n_mero_exterior">Número exterior</string>
    <string name="correo_electr_nico_proporcionado">Correo electrónico proporcionado</string>
    <string name="contrase_a_aleatoria">Contraseña aleatoria</string>
    <string name="actualizar_informaci_n">Actualizar información</string>

    <string name="g_nero">Género</string>

    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="mujer">Mujer</string>

    <string name="hombre">Hombre</string>
    <string name="otro">Otro</string>
    <string name="prefiero_no_responder">Prefiero no responder</string>
    <string name="tipo_de_relaci_n">Tipo de relación</string>
    <string name="editar_invitado">Editar invitado</string>
    <string name="invitados_y_reuniones">Invitados y reuniones</string>

    <string name="residentes">Residentes</string>
    <string name="agregar_residente">Agregar residente</string>
    <string name="fecha_de_ingreso_02_10_2020_hora_16_50">Fecha de ingreso: 02/10/2020 Hora: 16:50</string>
    <string name="fecha_de_salida_02_10_2020_hora_19_10">Fecha de salida: 02/10/2020 Hora: 19:10</string>
    <string name="anfitri_n_rebeca_s_nchez">Anfitrión: Rebeca Sánchez</string>

    <string name="registro_de_prueba_usuario_normal">Registro de prueba usuario normal</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="modo_administrador">Modo administrador</string>

    <string name="alerta_de_seguridad">Alerta de seguridad</string>
    <string name="gesti_n_de_residentes">Gestión de residentes</string>
    <string name="gesti_n_de_invitados">Gestión de Invitados</string>
    <string name="bit_cora">Bitácora</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="sonido_de_splash_screen">Sonido de Splash Screen</string>
    <string name="buenos_d_as">Buenos días,</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="pr_ximo_6_de_noviembre">Próximo 6 de Noviembre</string>
    <string name="acerca_de">Acerca de</string>
    <string name="cont_ctanos">Contáctanos</string>
    <string name="organizar_una_reuni_n">Organizar una reunión</string>
    <string name="agregar_nuevo_invitado">Agregar nuevo invitado</string>
    <string name="invitados">Invitados</string>
    <string name="espa_ol">Español</string>
    <string name="ingl_s">Inglés</string>
</resources>